# pudo-sequences

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: _quarto.yml  api.qmd  development.qmd  examples.qmd  index.qmd
docs/_freeze/api/execute-results/: html.json
pudo_sequences/: __init__.py  core.py  index.py
tests/: test_pudo.py  test_trie.py
